Complete UI of UBian IntelliAsk Version 1.00

--- a/index.html
+++ b/index.html
@@ -8,32 +8,43 @@
 </head>
 <body>
     <header class="header">
+        <!-- Logo and Title Section -->
         <div class="logo-title">
             <img src="assets/images/ublc_logo.png" alt="University Logo" class="logo">
-            <h1>UBian IntelliAsk</h1>
+        </div>
+        <!-- Title in the Center -->
+        <h1 class="header-title">UBian IntelliAsk</h1>
         </div>
         <div class="date-time" id="date-time"></div>
     </header>
 
     <main class="main-content">
-        <!-- Left Section -->
+         <!-- Left Section -->
         <div class="left-section">
-            <div class="panel" id="updates">
-                <h2>Updates</h2>
-                <p>Stay informed with the latest updates and events</p>
-            </div>
-            <div class="panel" id="map">
-                <h2>Map</h2>
-                <p>Interactive 2D Map of the Campus</p>
-            </div>
-            <div class="panel" id="programs">
-                <h2>Programs</h2>
-                <p>Explore our Four Academic Programs</p>
-            </div>
-            <div class="panel" id="about">
-                <h2>About</h2>
-                <p>Learn more about our Department</p>
-            </div>
+         <a href="updates.html">
+                <div class="panel" id="updates">
+                    <h2>Updates</h2>
+                    <p>Stay informed with the latest updates and events</p>
+                </div>
+            </a>
+            <a href="map.html">
+                <div class="panel" id="map">
+                    <h2>Map</h2>
+                    <p>Interactive 2D Map of the Campus</p>
+                </div>
+            </a>
+            <a href="programs.html">
+                <div class="panel" id="programs">
+                    <h2>Programs</h2>
+                    <p>Explore our Four Academic Programs</p>
+                </div>
+            </a>
+            <a href="about.html">
+                <div class="panel" id="about">
+                    <h2>About</h2>
+                    <p>Learn more about our Department</p>
+                </div>
+            </a>
         </div>
 
         <!-- Right Section -->
@@ -55,9 +66,9 @@
 
     <section id="announcements">
         <div class="scroll-container">
-            <img src="assets/images/announcement1.jpg" alt="Announcement Image 1">
+            <img src="assets/images/intelliask-logo.png" alt="Announcement Image 1">
             <p>Welcome to the UBian IntelliAsk Kiosk! Check out the latest events and updates.</p>
-            <img src="assets/images/announcement2.jpg" alt="Announcement Image 2">
+            <img src="assets/images/UB-logo.jpg" alt="Announcement Image 2">
             <p>Stay tuned for exciting announcements from the College of Engineering and Architecture!</p>
         </div>
     </section>
